fixed inputs to be hidden by default

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ p {
   text-align: center;
   margin-top: 1rem;
   color: var(--clr-primary-4);
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .container {
@@ -256,6 +256,9 @@ img {
 
 .form-control input {
   position: absolute;
+  top: 20%;
+  left: 40%;
+  visibility: hidden;
   z-index: -3;
 }
 
